Chapter 1 - Initial write-up

--- a/references.bib
+++ b/references.bib
@@ -1,28 +1,29 @@
-% Add references here in bibtex format.
-% See https://www.overleaf.com/learn/latex/How_to_Write_a_Thesis_in_LaTeX_(Part_4):_Bibliographies_with_BibLaTeX
+@report{salesforce,
+    author = {Salesforce},
+    title  = {The Power of Personalized Shopping},
+    url    = {https://www.salesforce.com/form/commerce/power-of-personalized-shopping}
+}
 
-@article{einstein,
-    author        = {Albert Einstein},
-    title         = {Zur Elektrodynamik bewegter K{\"o}rper. (German) [On the electrodynamics of moving bodies]},
-    journaltitle  = {Annalen der Physik},
-    year          = {1905},
-    volume        = {322},
-    number        = {10},
-    pages         = {891-921},
-    doi           = {http://dx.doi.org/10.1002/andp.19053221004}
+@report{mckinsey,
+    author = {McKinsey},
+    title  = {How Retailers Can Keep Up with Consumers},
+    url    = {https://www.mckinsey.com/industries/retail/our-insights/how-retailers-can-keep-up-with-consumers}
 }
- 
-@online{knuthwebsite,
-    author        = {Donald Knuth},
-    title         = {Knuth: Computers and Typesetting},
-    year          = {1984},
-    url           = {http://www-cs-faculty.stanford.edu/~uno/abcde.html}
+
+@report{thenewspk,
+    author = {The News Pakistan},
+    title  = {Pakistani Fashion Industry has Great Potential},
+    url    = {https://www.thenews.com.pk/print/450217-pakistani-fashion-industry-has-great-potential}
 }
- 
-@book{latexcompanion,
-    author        = {Michel Goossens and Frank Mittelbach and Alexander Samarin},
-    title         = {The \LaTeX\ Companion},
-    year          = {1993},
-    publisher     = {Addison-Wesley},
-    location      = {Reading, Massachusetts}
+
+@report{commerce360,
+    author = {Digital Commerce 360},
+    title  = {US millennials now do most of their shopping online},
+    url    = {https://www.digitalcommerce360.com/2019/03/26/millennials-online-shopping/}
+}
+
+@report{emarketer,
+    author = {eMarketer},
+    title  = {Millennials Make More Apparel Purchases than Other Generations},
+    url    = {https://www.emarketer.com/content/millennials-make-more-apparel-purchases-than-other-generations}
 }
