--- a/report.tex
+++ b/report.tex
@@ -5,7 +5,7 @@
 \documentclass[12pt,twosided]{report}
 
 \usepackage[titletoc]{appendix} % for adding appendix to TOC
-\usepackage{biblatex}  % reference management
+\usepackage[sorting=none]{biblatex}  % reference management
 \usepackage{geometry}  % better margins and margin control
 \usepackage{graphicx}  % to include figures
 \usepackage{hyperref}  % internal and external links
@@ -30,7 +30,7 @@
 \addbibresource{references.bib}
 
 % Replace with your title
-\title{Chhoti Si Kaavish}
+\title{Personalized Outfit Recommendation System}
 
 % Allow recalling document title
 % from https://tex.stackexchange.com/a/15806/44301
