--- a/titlepage.tex
+++ b/titlepage.tex
@@ -10,10 +10,10 @@
       presented to the academic faculty\\
       by\\\bigskip
       \begin{tabular}{ll}
-        Musabbir Abdul Majeed & musabbir.majeed\\
-        Syeda Saleha Raza & saleha.raza\\
-        Waqar Saleem & waqar.saleem\\
-        Abdul Samad & abdul.samad\\
+        Muhammad Ali & ma02526\\
+        Osama Yousuf & oy02945\\
+        Syeda Areeba Kazmi & sk02901\\
+        Tasneem Adnan & ta02903\\
       \end{tabular}
     }\\\vfill
     \includegraphics[width=.4\textwidth]{logo.pdf}\\
