--- a/approval.tex
+++ b/approval.tex
@@ -10,7 +10,7 @@ This Kaavish project was supervised by:\\\bigskip\\\bigskip\\\bigskip
 \hfill %
 \begin{tabular}{l}
   \line(1,0){200}\\
-  My Internal Supervisor \\ % Name of your CS supervisor
+  Dr. Shahid Hussain \\ 
   Faculty of Computer Science\\
   Habib University
 \end{tabular}\\\bigskip\bigskip
