--- a/titlepage.tex
+++ b/titlepage.tex
@@ -1,3 +1,4 @@
+\hypersetup{pageanchor=false}
 \begin{titlepage}
   
   \newgeometry{top=100pt,bottom=75pt}   
@@ -28,7 +29,7 @@
   \end{center}
   \restoregeometry
 \end{titlepage}
-
+\hypersetup{pageanchor=true}
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "report"
